err/iw.dist.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iw'...
Listing './lib/python3.5/site-packages/iw/dist'...
Compiling './lib/python3.5/site-packages/iw/dist/core.py'...
***   File "./lib/python3.5/site-packages/iw/dist/core.py", line 114
    except DistutilsSetupError, msg:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iw/dist/docs'...
Listing './lib/python3.5/site-packages/iw/dist/doctests'...
Compiling './lib/python3.5/site-packages/iw/dist/mregister.py'...
***   File "./lib/python3.5/site-packages/iw/dist/mregister.py", line 85
    print response.read()
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iw/dist/mupload.py'...
***   File "./lib/python3.5/site-packages/iw/dist/mupload.py", line 167
    raise AssertionError, "unsupported schema "+schema
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iw/dist/pypirc.py'...
***   File "./lib/python3.5/site-packages/iw/dist/pypirc.py", line 57
    os.chmod(rc, 0600)
                    ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/iw/dist/tests'...
Listing './lib/python3.5/site-packages/iw.dist-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
